--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,12 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature android:name="android.hardware.camera"
         android:required="false" />
+    <uses-feature android:name="android.hardware.camera.autofocus"
+        android:required="false"/>
 
     <application
         android:allowBackup="true"
@@ -26,6 +29,7 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
+
         <activity
             android:name=".ShowProfile"
             android:label="@string/show_profile">
@@ -35,8 +39,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EditProfile"
-                    android:label="@string/edit_profile"></activity>
+        <activity
+            android:name=".EditProfile"
+            android:label="@string/edit_profile"
+            android:exported="true"
+            />
 
     </application>
 
