"Molto più che possibile" versione finale. Aggiornata al 27/03/2018. Debuggate e poi eventualmente consegnamo.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'org.jetbrains:annotations:15.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
 }
